y.output
   0  $accept : Program $end

   1  Program : CompilationUnits

   2  GlobalVariable : Type VariableDeclaratorList Semicolon

   3  VariableDeclaratorList : VariableDeclaratorId
   4                         | VariableDeclaratorList CM VariableDeclaratorId

   5  Type : CLASS_NAME
   6       | ArrayType
   7       | PrimitiveType
   8       | ListType
   9       | TableType

  10  ListType : LIST
  11           | LIST LT PrimitiveType GT

  12  TableType : TABLE
  13            | TABLE LT PrimitiveType GT
  14            | TABLE LT PrimitiveType CM PrimitiveType GT

  15  PrimitiveType : INT
  16                | BOOL
  17                | DOUBLE
  18                | STRING

  19  ArrayType : PrimitiveType LB RB
  20            | Name LB RB
  21            | ArrayType LB RB

  22  CompilationUnits : CompilationUnit
  23                   | CompilationUnits CompilationUnit

  24  CompilationUnit : ClassDeclaration
  25                  | Function
  26                  | AssignmentExpression
  27                  | GlobalVariable

  28  ClassDeclaration : ClassHeader ClassBlock

  29  ClassHeader : CLASS CLASS_NAME

  30  ClassBlock : LC ClassBlockUnitList RC
  31             | LC RC

  32  ClassVariableList : IDENT
  33                    | ClassVariableList CM IDENT

  34  ClassVariable : Type ClassVariableList Semicolon
  35                | Type Assignment

  36  ClassBlockUnitList : ClassBlockUnit
  37                     | ClassBlockUnitList ClassBlockUnit

  38  ClassBlockUnit : ClassVariable
  39                 | MethodDeclaration
  40                 | ConstructorDeclaration

  41  MethodDeclaration : MethodHeader MethodBody

  42  MethodHeader : Type MethodDeclarator
  43               | VOID MethodDeclarator

  44  MethodDeclarator : IDENT LP FormalParameterList RP
  45                   | IDENT LP RP

  46  MethodBody : Block

  47  ConstructorDeclaration : ConstructorDeclarator ConstructorBody

  48  ConstructorDeclarator : CLASS_NAME LP FormalParameterList RP
  49                        | CLASS_NAME LP RP

  50  ConstructorBody : Block

  51  Function : FunctionPrototype
  52           | FunctionDefinition

  53  FunctionPrototype : Type IDENT LP TypeList RP Semicolon
  54                    | Type IDENT LP RP Semicolon
  55                    | VOID IDENT LP TypeList RP Semicolon
  56                    | VOID IDENT LP RP Semicolon

  57  TypeList : Type
  58           | TypeList CM Type

  59  FunctionDefinition : Type IDENT LP FormalParameterList RP FunctionBody
  60                     | Type IDENT LP RP FunctionBody
  61                     | VOID IDENT LP FormalParameterList RP FunctionBody
  62                     | VOID IDENT LP RP FunctionBody

  63  FunctionBody : Block

  64  Block : LC BlockStatementList RC
  65        | LC RC

  66  BlockStatementList : BlockStatement
  67                     | BlockStatementList BlockStatement

  68  BlockStatement : LocalVariable
  69                 | Statement

  70  NoLocalVariableBlock : LC NoLocalVariableBlockStatementList RC
  71                       | LC RC

  72  NoLocalVariableBlockStatementList : NoLocalVariableBlockStatement
  73                                    | NoLocalVariableBlockStatementList NoLocalVariableBlockStatement

  74  NoLocalVariableBlockStatement : Statement

  75  Statement : StatementWithoutTrailingSubstatement
  76            | IfThenStatement
  77            | IfThenElseStatement
  78            | WhileStatement
  79            | ForStatement

  80  StatementNoShortIf : StatementWithoutTrailingSubstatement
  81                     | IfThenElseStatementNoShortIf
  82                     | WhileStatementNoShortIf
  83                     | ForStatementNoShortIf

  84  StatementWithoutTrailingSubstatement : NoLocalVariableBlock
  85                                       | EmptyStatement
  86                                       | ExpressionStatement
  87                                       | BreakStatement
  88                                       | ReturnStatement

  89  ExpressionStatement : StatementExpression Semicolon
  90                      | SwapExpression Semicolon

  91  StatementExpression : Assignment
  92                      | MethodInvocation

  93  IfThenStatement : IF LP Expression RP Statement

  94  IfThenElseStatement : IF LP Expression RP StatementNoShortIf ELSE Statement

  95  IfThenElseStatementNoShortIf : IF LP Expression RP StatementNoShortIf ELSE StatementNoShortIf

  96  WhileStatement : WHILE LP Expression RP Statement
  97                 | IDENT NoLocalVariableBlock WHILE LP Expression RP Semicolon

  98  WhileStatementNoShortIf : WHILE LP Expression RP StatementNoShortIf

  99  ForInit : StatementExpressionList

 100  ForUpdate : StatementExpressionList

 101  ForStatement : FOR LP ForInit SM Expression SM ForUpdate RP Statement

 102  ForStatementNoShortIf : FOR LP ForInit SM Expression SM ForUpdate RP StatementNoShortIf

 103  StatementExpressionList : StatementExpression
 104                          | StatementExpressionList CM StatementExpression

 105  EmptyStatement : Semicolon

 106  BreakStatement : BREAK Semicolon

 107  ReturnStatement : RETURN Expression Semicolon
 108                  | RETURN Semicolon

 109  ArgumentList : Expression
 110               | ArgumentList CM Expression

 111  Primary : PrimaryNoNewArray
 112          | ConcatentationExpresssion

 113  ArrayInitializer : PrimaryNoNewArray
 114                   | ArrayInitializer CM PrimaryNoNewArray

 115  PrimaryNoNewArray : Literal
 116                    | LP Expression RP
 117                    | MethodInvocation
 118                    | Assignable
 119                    | LC ArrayInitializer RC

 120  FieldAccess : Primary DOT IDENT

 121  MethodInvocation : Name LP ArgumentList RP
 122                   | Name LP RP
 123                   | Primary DOT IDENT LP ArgumentList RP
 124                   | Primary DOT IDENT LP RP

 125  ArrayAccess : PrimaryNoNewArray LB Expression RB

 126  PostFixExpression : Primary

 127  UnaryExpression : MINUS UnaryExpression
 128                  | UnaryExpressionNotPlusMinus

 129  UnaryExpressionNotPlusMinus : PostFixExpression
 130                              | BANG UnaryExpression
 131                              | DROLL UnaryExpression

 132  MultiplicativeExpression : UnaryExpression
 133                           | MultiplicativeExpression MUL UnaryExpression
 134                           | MultiplicativeExpression DIV UnaryExpression
 135                           | MultiplicativeExpression MOD UnaryExpression
 136                           | MultiplicativeExpression DROLL UnaryExpression

 137  ImplicitConcatExpression : STRINGLITERAL Name
 138                           | Name STRINGLITERAL
 139                           | STRINGLITERAL STRINGLITERAL
 140                           | ConcatentationExpresssion Name
 141                           | ConcatentationExpresssion STRINGLITERAL

 142  ExplicitConcatExpression : STRINGLITERAL PLUS Name
 143                           | Name PLUS STRINGLITERAL
 144                           | ConcatentationExpresssion PLUS Name
 145                           | ConcatentationExpresssion PLUS STRINGLITERAL

 146  ConcatentationExpresssion : ImplicitConcatExpression

 147  AdditiveExpression : MultiplicativeExpression
 148                     | AdditiveExpression PLUS MultiplicativeExpression
 149                     | AdditiveExpression MINUS MultiplicativeExpression

 150  RelationalExpression : AdditiveExpression
 151                       | RelationalExpression LT AdditiveExpression
 152                       | RelationalExpression LE AdditiveExpression
 153                       | RelationalExpression GT AdditiveExpression
 154                       | RelationalExpression GE AdditiveExpression

 155  EqualityExpression : RelationalExpression
 156                     | EqualityExpression EQ RelationalExpression
 157                     | EqualityExpression NE RelationalExpression

 158  ConditionalAndExpression : EqualityExpression
 159                           | ConditionalAndExpression ANDAND EqualityExpression

 160  ConditionalOrExpression : ConditionalAndExpression
 161                          | ConditionalOrExpression OROR ConditionalAndExpression

 162  AssignmentExpression : ConditionalOrExpression
 163                       | Assignment

 164  Assignment : Assignable AssignmentOperator ConditionalOrExpression
 165             | Assignable AssignmentOperator Assignment

 166  SwapExpression : Assignable SWAP Assignable

 167  Assignable : Name
 168             | FieldAccess
 169             | ArrayAccess

 170  AssignmentOperator : ASN
 171                     | PLASN
 172                     | MIASN

 173  Expression : AssignmentExpression

 174  FormalParameterList : FormalParameter
 175                      | FormalParameterList CM FormalParameter

 176  FormalParameter : Type VariableDeclaratorId

 177  LocalVariable : Type VariableDeclaratorList Semicolon

 178  VariableDeclaratorId : IDENT
 179                       | VariableDeclaratorId LB RB

 180  Name : SimpleName
 181       | QualifiedName

 182  SimpleName : IDENT

 183  QualifiedName : Name DOT IDENT

 184  BoolLiteral : TRUE
 185              | FALSE

 186  Semicolon : SM
 187            |

 188  Literal : INTLITERAL
 189          | FLOATLITERAL
 190          | BoolLiteral
 191          | STRINGLITERAL
 192          | CHARLITERAL
 193          | NULLLITERAL

state 0
	$accept : . Program $end  (0)

	BOOL  shift 1
	CLASS  shift 2
	STRING  shift 3
	DOUBLE  shift 4
	INT  shift 5
	TABLE  shift 6
	LIST  shift 7
	TRUE  shift 8
	FALSE  shift 9
	VOID  shift 10
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	BANG  shift 19
	MINUS  shift 20
	DROLL  shift 21
	CLASS_NAME  shift 22
	.  error

	Program  goto 23
	GlobalVariable  goto 24
	ClassDeclaration  goto 25
	CompilationUnits  goto 26
	CompilationUnit  goto 27
	Function  goto 28
	FunctionPrototype  goto 29
	FunctionDefinition  goto 30
	AssignmentExpression  goto 31
	Name  goto 32
	SimpleName  goto 33
	QualifiedName  goto 34
	ClassHeader  goto 35
	Assignable  goto 36
	Assignment  goto 37
	ConditionalOrExpression  goto 38
	EqualityExpression  goto 39
	RelationalExpression  goto 40
	AdditiveExpression  goto 41
	MultiplicativeExpression  goto 42
	UnaryExpressionNotPlusMinus  goto 43
	UnaryExpression  goto 44
	PostFixExpression  goto 45
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 49
	Primary  goto 50
	ConditionalAndExpression  goto 51
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	BoolLiteral  goto 55
	Type  goto 56
	PrimitiveType  goto 57
	ArrayType  goto 58
	ListType  goto 59
	TableType  goto 60


state 1
	PrimitiveType : BOOL .  (16)

	.  reduce 16


state 2
	ClassHeader : CLASS . CLASS_NAME  (29)

	CLASS_NAME  shift 61
	.  error


state 3
	PrimitiveType : STRING .  (18)

	.  reduce 18


state 4
	PrimitiveType : DOUBLE .  (17)

	.  reduce 17


state 5
	PrimitiveType : INT .  (15)

	.  reduce 15


state 6
	TableType : TABLE .  (12)
	TableType : TABLE . LT PrimitiveType GT  (13)
	TableType : TABLE . LT PrimitiveType CM PrimitiveType GT  (14)

	LT  shift 62
	TRUE  reduce 12
	FALSE  reduce 12
	IDENT  reduce 12
	NULLLITERAL  reduce 12
	INTLITERAL  reduce 12
	CHARLITERAL  reduce 12
	FLOATLITERAL  reduce 12
	STRINGLITERAL  reduce 12
	LP  reduce 12
	RP  reduce 12
	LC  reduce 12
	CM  reduce 12


state 7
	ListType : LIST .  (10)
	ListType : LIST . LT PrimitiveType GT  (11)

	LT  shift 63
	TRUE  reduce 10
	FALSE  reduce 10
	IDENT  reduce 10
	NULLLITERAL  reduce 10
	INTLITERAL  reduce 10
	CHARLITERAL  reduce 10
	FLOATLITERAL  reduce 10
	STRINGLITERAL  reduce 10
	LP  reduce 10
	RP  reduce 10
	LC  reduce 10
	CM  reduce 10


state 8
	BoolLiteral : TRUE .  (184)

	.  reduce 184


state 9
	BoolLiteral : FALSE .  (185)

	.  reduce 185


state 10
	FunctionPrototype : VOID . IDENT LP TypeList RP Semicolon  (55)
	FunctionPrototype : VOID . IDENT LP RP Semicolon  (56)
	FunctionDefinition : VOID . IDENT LP FormalParameterList RP FunctionBody  (61)
	FunctionDefinition : VOID . IDENT LP RP FunctionBody  (62)

	IDENT  shift 64
	.  error


state 11
	SimpleName : IDENT .  (182)

	.  reduce 182


state 12
	Literal : NULLLITERAL .  (193)

	.  reduce 193


state 13
	Literal : INTLITERAL .  (188)

	.  reduce 188


state 14
	Literal : CHARLITERAL .  (192)

	.  reduce 192


state 15
	Literal : FLOATLITERAL .  (189)

	.  reduce 189


16: shift/reduce conflict (shift 11, reduce 191) on IDENT
16: shift/reduce conflict (shift 65, reduce 191) on STRINGLITERAL
state 16
	ImplicitConcatExpression : STRINGLITERAL . Name  (137)
	ImplicitConcatExpression : STRINGLITERAL . STRINGLITERAL  (139)
	Literal : STRINGLITERAL .  (191)

	IDENT  shift 11
	STRINGLITERAL  shift 65
	$end  reduce 191
	BOOL  reduce 191
	BREAK  reduce 191
	CLASS  reduce 191
	STRING  reduce 191
	DOUBLE  reduce 191
	ELSE  reduce 191
	FOR  reduce 191
	IF  reduce 191
	INT  reduce 191
	RETURN  reduce 191
	TABLE  reduce 191
	LIST  reduce 191
	TRUE  reduce 191
	FALSE  reduce 191
	VOID  reduce 191
	WHILE  reduce 191
	NULLLITERAL  reduce 191
	INTLITERAL  reduce 191
	CHARLITERAL  reduce 191
	FLOATLITERAL  reduce 191
	LP  reduce 191
	RP  reduce 191
	LC  reduce 191
	RC  reduce 191
	LB  reduce 191
	RB  reduce 191
	SM  reduce 191
	CM  reduce 191
	DOT  reduce 191
	LT  reduce 191
	GT  reduce 191
	BANG  reduce 191
	EQ  reduce 191
	NE  reduce 191
	LE  reduce 191
	GE  reduce 191
	ANDAND  reduce 191
	OROR  reduce 191
	PLUS  reduce 191
	MINUS  reduce 191
	MUL  reduce 191
	DIV  reduce 191
	MOD  reduce 191
	DROLL  reduce 191
	CLASS_NAME  reduce 191

	Name  goto 66
	SimpleName  goto 33
	QualifiedName  goto 34


state 17
	PrimaryNoNewArray : LP . Expression RP  (116)

	TRUE  shift 8
	FALSE  shift 9
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	BANG  shift 19
	MINUS  shift 20
	DROLL  shift 21
	.  error

	AssignmentExpression  goto 67
	Name  goto 68
	SimpleName  goto 33
	QualifiedName  goto 34
	Expression  goto 69
	Assignable  goto 36
	Assignment  goto 37
	ConditionalOrExpression  goto 38
	EqualityExpression  goto 39
	RelationalExpression  goto 40
	AdditiveExpression  goto 41
	MultiplicativeExpression  goto 42
	UnaryExpressionNotPlusMinus  goto 43
	UnaryExpression  goto 44
	PostFixExpression  goto 45
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 49
	Primary  goto 50
	ConditionalAndExpression  goto 51
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	BoolLiteral  goto 55


state 18
	PrimaryNoNewArray : LC . ArrayInitializer RC  (119)

	TRUE  shift 8
	FALSE  shift 9
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	.  error

	Name  goto 68
	SimpleName  goto 33
	QualifiedName  goto 34
	Assignable  goto 70
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 71
	Primary  goto 72
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	ArrayInitializer  goto 73
	BoolLiteral  goto 55


state 19
	UnaryExpressionNotPlusMinus : BANG . UnaryExpression  (130)

	TRUE  shift 8
	FALSE  shift 9
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	BANG  shift 19
	MINUS  shift 20
	DROLL  shift 21
	.  error

	Name  goto 68
	SimpleName  goto 33
	QualifiedName  goto 34
	Assignable  goto 70
	UnaryExpressionNotPlusMinus  goto 43
	UnaryExpression  goto 74
	PostFixExpression  goto 45
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 49
	Primary  goto 50
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	BoolLiteral  goto 55


state 20
	UnaryExpression : MINUS . UnaryExpression  (127)

	TRUE  shift 8
	FALSE  shift 9
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	BANG  shift 19
	MINUS  shift 20
	DROLL  shift 21
	.  error

	Name  goto 68
	SimpleName  goto 33
	QualifiedName  goto 34
	Assignable  goto 70
	UnaryExpressionNotPlusMinus  goto 43
	UnaryExpression  goto 75
	PostFixExpression  goto 45
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 49
	Primary  goto 50
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	BoolLiteral  goto 55


state 21
	UnaryExpressionNotPlusMinus : DROLL . UnaryExpression  (131)

	TRUE  shift 8
	FALSE  shift 9
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	BANG  shift 19
	MINUS  shift 20
	DROLL  shift 21
	.  error

	Name  goto 68
	SimpleName  goto 33
	QualifiedName  goto 34
	Assignable  goto 70
	UnaryExpressionNotPlusMinus  goto 43
	UnaryExpression  goto 76
	PostFixExpression  goto 45
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 49
	Primary  goto 50
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	BoolLiteral  goto 55


state 22
	Type : CLASS_NAME .  (5)

	.  reduce 5


state 23
	$accept : Program . $end  (0)

	$end  accept


state 24
	CompilationUnit : GlobalVariable .  (27)

	.  reduce 27


state 25
	CompilationUnit : ClassDeclaration .  (24)

	.  reduce 24


state 26
	Program : CompilationUnits .  (1)
	CompilationUnits : CompilationUnits . CompilationUnit  (23)

	BOOL  shift 1
	CLASS  shift 2
	STRING  shift 3
	DOUBLE  shift 4
	INT  shift 5
	TABLE  shift 6
	LIST  shift 7
	TRUE  shift 8
	FALSE  shift 9
	VOID  shift 10
	IDENT  shift 11
	NULLLITERAL  shift 12
	INTLITERAL  shift 13
	CHARLITERAL  shift 14
	FLOATLITERAL  shift 15
	STRINGLITERAL  shift 16
	LP  shift 17
	LC  shift 18
	BANG  shift 19
	MINUS  shift 20
	DROLL  shift 21
	CLASS_NAME  shift 22
	$end  reduce 1

	GlobalVariable  goto 24
	ClassDeclaration  goto 25
	CompilationUnit  goto 77
	Function  goto 28
	FunctionPrototype  goto 29
	FunctionDefinition  goto 30
	AssignmentExpression  goto 31
	Name  goto 32
	SimpleName  goto 33
	QualifiedName  goto 34
	ClassHeader  goto 35
	Assignable  goto 36
	Assignment  goto 37
	ConditionalOrExpression  goto 38
	EqualityExpression  goto 39
	RelationalExpression  goto 40
	AdditiveExpression  goto 41
	MultiplicativeExpression  goto 42
	UnaryExpressionNotPlusMinus  goto 43
	UnaryExpression  goto 44
	PostFixExpression  goto 45
	ArrayAccess  goto 46
	MethodInvocation  goto 47
	FieldAccess  goto 48
	PrimaryNoNewArray  goto 49
	Primary  goto 50
	ConditionalAndExpression  goto 51
	Literal  goto 52
	ConcatentationExpresssion  goto 53
	ImplicitConcatExpression  goto 54
	BoolLiteral  goto 55
	Type  goto 56
	PrimitiveType  goto 57
	ArrayType  goto 58
	ListType  goto 59
	TableType  goto 60


state 27
	CompilationUnits : CompilationUnit .  (22)

	.  reduce 22


state 28
	CompilationUnit : Function .  (25)

	.  reduce 25


state 29
	Function : FunctionPrototype .  (51)

	.  reduce 51


state 30
	Function : FunctionDefinition .  (52)

	.  reduce 52


state 31
	CompilationUnit : AssignmentExpression .  (26)

	.  reduce 26


32: shift/reduce conflict (shift 78, reduce 167) on STRINGLITERAL
32: shift/reduce conflict (shift 79, reduce 167) on LP
32: shift/reduce conflict (shift 80, reduce 167) on LB
32: shift/reduce conflict (shift 81, reduce 167) on DOT
state 32
	ArrayType : Name . LB RB  (20)
	MethodInvocation : Name . LP ArgumentList RP  (121)
	MethodInvocation : Name . LP RP  (122)
	ImplicitConcatExpression : Name . STRINGLITERAL  (138)
	Assignable : Name .  (167)
	QualifiedName : Name . DOT IDENT  (183)

	STRINGLITERAL  shift 78
	LP  shift 79
	LB  shift 80
	DOT  shift 81
	$end  reduce 167
	BOOL  reduce 167
	CLASS  reduce 167
	STRING  reduce 167
	DOUBLE  reduce 167
	INT  reduce 167
	TABLE  reduce 167
	LIST  reduce 167
	TRUE  reduce 167
	FALSE  reduce 167
	VOID  reduce 167
	IDENT  reduce 167
	NULLLITERAL  reduce 167
	INTLITERAL  reduce 167
	CHARLITERAL  reduce 167
	FLOATLITERAL  reduce 167
	LC  reduce 167
	ASN  reduce 167
	LT  reduce 167
	GT  reduce 167
	BANG  reduce 167
	EQ  reduce 167
	NE  reduce 167
	LE  reduce 167
	GE  reduce 167
	ANDAND  reduce 167
	OROR  reduce 167
	PLUS  reduce 167
	MINUS  reduce 167
	MUL  reduce 167
	DIV  reduce 167
	MOD  reduce 167
	PLASN  reduce 167
	MIASN  reduce 167
	SWAP  reduce 167
	DROLL  reduce 167
	CLASS_NAME  reduce 167


state 33
	Name : SimpleName .  (180)

	.  reduce 180


state 34
	Name : QualifiedName .  (181)

	.  reduce 181


state 35
	ClassDeclaration : ClassHeader . ClassBlock  (28)

	LC  shift 82
	.  error

	ClassBlock  goto 83


state 36
	PrimaryNoNewArray : Assignable .  (118)
	Assignment : Assignable . AssignmentOperator ConditionalOrExpression  (164)
	Assignment : Assignable . AssignmentOperator Assignment  (165)

	ASN  shift 84
	PLASN  shift 85
	MIASN  shift 86
	$end  reduce 118
	BOOL  reduce 118
	BREAK  reduce 118
	CLASS  reduce 118
	STRING  reduce 118
	DOUBLE  reduce 118
	ELSE  reduce 118
	FOR  reduce 118
	IF  reduce 118
	INT  reduce 118
	RETURN  reduce 118
	TABLE  reduce 118
	LIST  reduce 118
	TRUE  reduce 118
	FALSE  reduce 118
	VOID  reduce 118
	WHILE  reduce 118
	IDENT  reduce 118
	NULLLITERAL  reduce 118
	INTLITERAL  reduce 118
	CHARLITERAL  reduce 118
	FLOATLITERAL  reduce 118
	STRINGLITERAL  reduce 118
	LP  reduce 118
	RP  reduce 118
	LC  reduce 118
	RC  reduce 118
	LB  reduce 118
	RB  reduce 118
	SM  reduce 118
	CM  reduce 118
	DOT  reduce 118
	LT  reduce 118
	GT  reduce 118
	BANG  reduce 118
	EQ  reduce 118
	NE  reduce 118
	LE  reduce 118
	GE  reduce 118
	ANDAND  reduce 118
	OROR  reduce 118
	PLUS  reduce 118
	MINUS  reduce 118
	MUL  reduce 118
	DIV  reduce 118
	MOD  reduce 118
	DROLL  reduce 118
	CLASS_NAME  reduce 118

	AssignmentOperator  goto 87


state 37
	AssignmentExpression : Assignment .  (163)

	.  reduce 163


state 38
	ConditionalOrExpression : ConditionalOrExpression . OROR ConditionalAndExpression  (161)
	AssignmentExpression : ConditionalOrExpression .  (162)

	OROR  shift 88
	$end  reduce 162
	BOOL  reduce 162
	BREAK  reduce 162
	CLASS  reduce 162
	STRING  reduce 162
	DOUBLE  reduce 162
	ELSE  reduce 162
	FOR  reduce 162
	IF  reduce 162
	INT  reduce 162
	RETURN  reduce 162
	TABLE  reduce 162
	LIST  reduce 162
	TRUE  reduce 162
	FALSE  reduce 162
	VOID  reduce 162
	WHILE  reduce 162
	IDENT  reduce 162
	NULLLITERAL  reduce 162
	INTLITERAL  reduce 162
	CHARLITERAL  reduce 162
	FLOATLITERAL  reduce 162
	STRINGLITERAL  reduce 162
	LP  reduce 162
	RP  reduce 162
	LC  reduce 162
	RC  reduce 162
	RB  reduce 162
	SM  reduce 162
	CM  reduce 162
	BANG  reduce 162
	MINUS  reduce 162
	DROLL  reduce 162
	CLASS_NAME  reduce 162


state 39
	EqualityExpression : EqualityExpression . EQ RelationalExpression  (156)
	EqualityExpression : EqualityExpression . NE RelationalExpression  (157)
	ConditionalAndExpression : EqualityExpression .  (158)

	EQ  shift 89
	NE  shift 90
	$end  reduce 158
	BOOL  reduce 158
	BREAK  reduce 158
	CLASS  reduce 158
	STRING  reduce 158
	DOUBLE  reduce 158
	ELSE  reduce 158
	FOR  reduce 158
	IF  reduce 158
	INT  reduce 158
	RETURN  reduce 158
	TABLE  reduce 158
	LIST  reduce 158
	TRUE  reduce 158
	FALSE  reduce 158
	VOID  reduce 158
	WHILE  reduce 158
	IDENT  reduce 158
	NULLLITERAL  reduce 158
	INTLITERAL  reduce 158
	CHARLITERAL  reduce 158
	FLOATLITERAL  reduce 158
	STRINGLITERAL  reduce 158
	LP  reduce 158
	RP  reduce 158
	LC  reduce 158
	RC  reduce 158
	RB  reduce 158
	SM  reduce 158
	CM  reduce 158
	BANG  reduce 158
	ANDAND  reduce 158
	OROR  reduce 158
	MINUS  reduce 158
	DROLL  reduce 158
	CLASS_NAME  reduce 158


state 40
	RelationalExpression : RelationalExpression . LT AdditiveExpression  (151)
	RelationalExpression : RelationalExpression . LE AdditiveExpression  (152)
	RelationalExpression : RelationalExpression . GT AdditiveExpression  (153)
	RelationalExpression : RelationalExpression . GE AdditiveExpression  (154)
	EqualityExpression : RelationalExpression .  (155)

	LT  shift 91
	GT  shift 92
	LE  shift 93
	GE  shift 94
	$end  reduce 155
	BOOL  reduce 155
	BREAK  reduce 155
	CLASS  reduce 155
	STRING  reduce 155
	DOUBLE  reduce 155
	ELSE  reduce 155
	FOR  reduce 155
	IF  reduce 155
	INT  reduce 155
	RETURN  reduce 155
	TABLE  reduce 155
	LIST  reduce 155
	TRUE  reduce 155
	FALSE  reduce 155
	VOID  reduce 155
	WHILE  reduce 155
	IDENT  reduce 155
	NULLLITERAL  reduce 155
	INTLITERAL  reduce 155
	CHARLITERAL  reduce 155
	FLOATLITERAL  reduce 155
	STRINGLITERAL  reduce 155
	LP  reduce 155
	RP  reduce 155
	LC  reduce 155
	RC  reduce 155
	RB  reduce 155
	SM  reduce 155
	CM  reduce 155
	BANG  reduce 155
	EQ  reduce 155
	NE  reduce 155
	ANDAND  reduce 155
	OROR  reduce 155
	MINUS  reduce 155
	DROLL  reduce 155
	CLASS_NAME  reduce 155


41: shift/reduce conflict (shift 96, reduce 150) on MINUS
state 41
	AdditiveExpression : AdditiveExpression . PLUS MultiplicativeExpression  (148)
	AdditiveExpression : AdditiveExpression . MINUS MultiplicativeExpression  (149)
	RelationalExpression : AdditiveExpression .  (150)

	PLUS  shift 95
	MINUS  shift 96
	$end  reduce 150
	BOOL  reduce 150
	BREAK  reduce 150
	CLASS  reduce 150
	STRING  reduce 150
	DOUBLE  reduce 150
	ELSE  reduce 150
	FOR  reduce 150
	IF  reduce 150
	INT  reduce 150
	RETURN  reduce 150
	TABLE  reduce 150
	LIST  reduce 150
	TRUE  reduce 150
	FALSE  reduce 150
	VOID  reduce 150
	WHILE  reduce 150
	IDENT  reduce 150
	NULLLITERAL  reduce 150
	INTLITERAL  reduce 150
	CHARLITERAL  reduce 150
	FLOATLITERAL  reduce 150
	STRINGLITERAL  reduce 150
	LP  reduce 150
	RP  reduce 150
	LC  reduce 150
	RC  reduce 150
	RB  reduce 150
	SM  reduce 150
	CM  reduce 150
	LT  reduce 150
	GT  reduce 150
	BANG  reduce 150
	EQ  reduce 150
	NE  reduce 150
	LE  reduce 150
	GE  reduce 150
	ANDAND  reduce 150
	OROR  reduce 150
	DROLL  reduce 150
	CLASS_NAME  reduce 150


42: shift/reduce conflict (shift 100, reduce 147) on DROLL
state 42
	MultiplicativeExpression : MultiplicativeExpression . MUL UnaryExpression  (133)
	MultiplicativeExpression : MultiplicativeExpression . DIV UnaryExpression  (134)
	MultiplicativeExpression : MultiplicativeExpression . MOD UnaryExpression  (135)
	MultiplicativeExpression : MultiplicativeExpression . DROLL UnaryExpression  (136)
	AdditiveExpression : MultiplicativeExpression .  (147)
